# PyBuilder-Generate

./: .gitignore  CLAUDE.md  PyBuilder_setup.iss  README.md  build.py  build_config.yaml  build_nuitka.py  build_pyinstaller.py  config.yaml  main.py  msvc_build_nuitka.py  pyproject.toml
.github/workflows/: README.md  build-nuitka.yml  build-pyinstaller.yml
assets/pyfiglet/fonts/: __init__.py
docs/: Experience.md  Next.md  Nuitka-Parameters.md  PLAN.md  PyInstaller-Parameters.md  PyInstaller参数对照表.md  Tutorial.md  nuitka.md  pyinstaller.md  参数对照表.md  数据文件打包说明.md
src/: __init__.py  __main__.py  app.py
src/screens/: __init__.py  base_config_screen.py  compile_config_screen.py  compiler_selector_screen.py  generation_screen.py  help_screen.py  installer_config_screen.py  installer_generation_screen.py  installer_options_screen.py  mode_selector_screen.py  package_options_screen.py  package_options_screen.tcss  plugin_selector_screen.py  project_selector_screen.py  welcome_screen.py
src/style/: compile_config_screen.tcss  compiler_selector_screen.tcss  generation_screen.tcss  help_screen.tcss  mode_selector_screen.tcss  package_options_screen.tcss  plugin_selector_screen.tcss  project_selector_screen.tcss  welcome_screen.tcss
src/utils/: __init__.py  build_config.py  config.py  installer_generator.py  script_generator.py  terminal.py
src/widgets/: __init__.py  figlet_widget.py  option_builders.py
